; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/hhctrl.ocx/extr_webbrowser.c_DoPageAction.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/hhctrl.ocx/extr_webbrowser.c_DoPageAction.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@OLECMDID_PRINT = common dso_local global i32 0, align 4
@OLECMDEXECOPT_DONTPROMPTUSER = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @DoPageAction(%struct.TYPE_3__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %6 = icmp ne %struct.TYPE_3__* %5, null
  br i1 %6, label %7, label %12

7:                                                ; preds = %2
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %13, label %12

12:                                               ; preds = %7, %2
  br label %52

13:                                               ; preds = %7
  %14 = load i32, i32* %4, align 4
  switch i32 %14, label %52 [
    i32 134, label %15
    i32 133, label %20
    i32 132, label %25
    i32 129, label %30
    i32 130, label %35
    i32 128, label %40
    i32 131, label %45
  ]

15:                                               ; preds = %13
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @IWebBrowser2_GoBack(i32 %18)
  br label %52

20:                                               ; preds = %13
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @IWebBrowser2_GoForward(i32 %23)
  br label %52

25:                                               ; preds = %13
  %26 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %27 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = call i32 @IWebBrowser2_GoHome(i32 %28)
  br label %52

30:                                               ; preds = %13
  %31 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %32 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  %34 = call i32 @IWebBrowser2_GoSearch(i32 %33)
  br label %52

35:                                               ; preds = %13
  %36 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %37 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 4
  %39 = call i32 @IWebBrowser2_Refresh(i32 %38)
  br label %52

40:                                               ; preds = %13
  %41 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %42 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 4
  %44 = call i32 @IWebBrowser2_Stop(i32 %43)
  br label %52

45:                                               ; preds = %13
  %46 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %47 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %46, i32 0, i32 0
  %48 = load i32, i32* %47, align 4
  %49 = load i32, i32* @OLECMDID_PRINT, align 4
  %50 = load i32, i32* @OLECMDEXECOPT_DONTPROMPTUSER, align 4
  %51 = call i32 @IWebBrowser2_ExecWB(i32 %48, i32 %49, i32 %50, i32 0, i32 0)
  br label %52

52:                                               ; preds = %12, %13, %45, %40, %35, %30, %25, %20, %15
  ret void
}

declare dso_local i32 @IWebBrowser2_GoBack(i32) #1

declare dso_local i32 @IWebBrowser2_GoForward(i32) #1

declare dso_local i32 @IWebBrowser2_GoHome(i32) #1

declare dso_local i32 @IWebBrowser2_GoSearch(i32) #1

declare dso_local i32 @IWebBrowser2_Refresh(i32) #1

declare dso_local i32 @IWebBrowser2_Stop(i32) #1

declare dso_local i32 @IWebBrowser2_ExecWB(i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
